# livevel

./: .gitignore  CMakeLists.txt  CMakePresets.json  MSVCConfig.cmake  README.md
livevel/: CMakeLists.txt  camera.cpp  camera.h  frame_processor.cpp  frame_processor.h  gesture_classifier.cpp  gesture_classifier.h  hand_overlay_renderer.cpp  hand_overlay_renderer.h  hand_tracker.cpp  hand_tracker.h  hand_tracker_backend.h  hand_tracking_types.h  livevel.cpp  mediapipe_backend.cpp  mediapipe_backend.h  mediapipe_c_api.h  opencv_gesture_backend.cpp  opencv_gesture_backend.h  region_cache.cpp  region_cache.h  renderer.cpp  renderer.h  thread_manager.cpp  thread_manager.h  utils.h
models/: README.md  download_model.ps1
src/: main.cpp
tests/: hand_tracking_contract_test.cpp  mediapipe_runtime_test.cpp
